--- a/src/components/CommonPageHero.astro
+++ b/src/components/CommonPageHero.astro
@@ -35,7 +35,7 @@ const backgroundFormCSSClasses = showBackgroundForm
   <div class="relative container">
     {
       showBackgroundForm && (
-        <BackgroundForm1 class="absolute z-[-1] top-[-125px] right-[-540px] rotate-[-31deg]" />
+        <BackgroundForm1 class="absolute z-[-1] top-[-125px] right-[-540px]" />
       )
     }
     <Grid class="gap-y-6">
