--- a/src/components/pages/homepage/Hero.astro
+++ b/src/components/pages/homepage/Hero.astro
@@ -8,7 +8,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
 <section class="overflow-hidden mt-[60px] 2xl:mt-[129px]">
   <div class="container relative 2xl:pb-[137px]">
     <BackgroundForm1
-      class="hidden lg:block absolute top-[140px] right-[-470px] z-[-1] rotate-[-30.785deg]"
+      class="hidden lg:block absolute top-[140px] right-[-470px] z-[-1]"
     />
 
     <Grid>
@@ -34,7 +34,7 @@ import DuoDeChoc from "../../DuoDeChoc.astro";
           Découvrir nos projets
         </CallToAction>
       </div>
-      <div class="2xl:col-start-9 2xl:col-span-3">
+      <div class="hidden 2xl:block col-start-9 col-span-3">
         <div class="relative mt-[67px]">
           <DuoDeChoc variant="big" />
         </div>
