--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -14,7 +14,7 @@ const {
 <section class="overflow-hidden pt-14">
   <div class="container relative mb-[100px]">
     <BackgroundForm1
-      class="absolute top-[95px] left-[-600px] z-[-1] w-[1159px] h-[586px] rotate-[-30.785deg]"
+      class="absolute top-[95px] left-[-600px] z-[-1] w-[1159px] h-[586px]"
     />
 
     <h2 class="mb-20 text-display-small text-center">{data.title}</h2>
