--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -19,7 +19,7 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
             class="absolute z-[-2] right-[-361px] top-[-22px] w-[383px] h-[381px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-[-1050px] bottom-[-160px] rotate-[-31deg]"
+            class="absolute z-[-3] right-[-1050px] bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
