--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -22,7 +22,7 @@ const backgroundFormCSSClasses = showBackgroundForm
         <div class="relative p-14 bg-surface3 rounded-[26px]">
           {
             showBackgroundForm && (
-              <BackgroundForm1 class="absolute z-[-1] top-[-205px] right-[-860px] rotate-[-31deg]" />
+              <BackgroundForm1 class="absolute z-[-1] top-[-205px] right-[-860px]" />
             )
           }
 
