--- a/src/components/pages/homepage/Expertises/index.astro
+++ b/src/components/pages/homepage/Expertises/index.astro
@@ -2,48 +2,60 @@
 import Grid from "../../../@common/Grid.astro";
 import Brush from "../../../@common/Brush.astro";
 import data from "../../../../data/homepage/expertises.yaml";
+import BackgroundForm1 from "../../../BackgroundForm1.astro";
 import Expertise from "./Expertise.astro";
 ---
 
-<section class="relative container mb-[140px]">
-  <Grid>
-    <h2
-      class="2xl:col-start-2 2xl:col-span-full text-headline-medium text-neutral1 mb-10"
-    >
-      {data.title}
-    </h2>
+<section
+  class="overflow-hidden 2xl:overflow-auto relative pt-[331px] 2xl:pt-0 mt-[-180px] 2xl:mt-0 mb-[100px] 2xl:mb-[140px]"
+>
+  <div class="container">
+    <Grid>
+      <h2
+        class="relative 2xl:col-start-2 col-span-full text-headline-medium text-neutral1 mb-6 2xl:mb-10"
+      >
+        {data.title}
 
-    <ul class="2xl:col-start-2 2xl:col-span-5 flex flex-col gap-8">
-      {
-        data.expertises.map((expertise, index) => {
-          return (
-            <li class="relative">
-              <Expertise expertise={expertise} />
+        <BackgroundForm1
+          as="span"
+          class="bg-red 2xl:hidden absolute z-[-1] top-[-255px] left-[135px]"
+        />
+      </h2>
 
-              {index === 0 && (
-                <Brush
-                  id="1"
-                  class="absolute top-[28px] left-[-80px] z-[-1] w-[237px] h-[281px] rotate-[136.069deg]"
-                />
-              )}
+      <ul
+        class="col-span-full 2xl:col-start-2 2xl:col-span-5 flex flex-col gap-8"
+      >
+        {
+          data.expertises.map((expertise, index) => {
+            return (
+              <li class="relative">
+                <Expertise expertise={expertise} />
 
-              {index === 1 && (
-                <Brush
-                  id="4"
-                  class="absolute top-[-39px] left-[481px] z-[-1] w-[490px] h-[487px]"
-                />
-              )}
+                {index === 0 && (
+                  <Brush
+                    id="1"
+                    class="hidden 2xl:block absolute top-[28px] left-[-80px] z-[-1] w-[237px] h-[281px] rotate-[136.069deg]"
+                  />
+                )}
 
-              {index === 2 && (
-                <Brush
-                  id="1"
-                  class="absolute top-[-89px] left-[-102px] z-[-1] w-[222px] h-[263px] rotate-[180deg]"
-                />
-              )}
-            </li>
-          );
-        })
-      }
-    </ul>
-  </Grid>
+                {index === 1 && (
+                  <Brush
+                    id="4"
+                    class="hidden 2xl:block absolute top-[-39px] left-[481px] z-[-1] w-[490px] h-[487px]"
+                  />
+                )}
+
+                {index === 2 && (
+                  <Brush
+                    id="1"
+                    class="hidden 2xl:block absolute top-[-89px] left-[-102px] z-[-1] w-[222px] h-[263px] rotate-[180deg]"
+                  />
+                )}
+              </li>
+            );
+          })
+        }
+      </ul>
+    </Grid>
+  </div>
 </section>
