header: use font headline large

--- a/src/components/Header/components/NavItem.astro
+++ b/src/components/Header/components/NavItem.astro
@@ -23,8 +23,7 @@ const selected = pathname.replaceAll("/", "") === to?.replaceAll("/", "");
   aria-current={selected ? "page" : undefined}
   class:list={[
     "nav-item",
-    "text-2xl",
-    "leading-normal",
+    "text-headline-large",
     "lg:text-label-medium",
     { selected },
   ]}
