--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,10 +9,16 @@
     font-weight: 700;
   }
 
-  .text-headline-large {
+  .text-headline-extra-large {
     font-size: 28px;
-    line-height: normal;
+    line-height: 38px;
     font-weight: 900;
+  }
+
+  .text-headline-large {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 500;
   }
 
   .text-headline-medium-bold {
