--- a/src/components/pages/homepage/ProjectsTeasing/Teasing.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/Teasing.astro
@@ -7,6 +7,6 @@ const { content } = Astro.props;
 ---
 
 <h3
-  class="text-headline-medium p-8 bg-surface5 rounded-[26px]"
+  class="text-headline-small 2xl:text-headline-medium p-8 bg-surface5 rounded-[26px]"
   set:html={content}
 />
