--- a/src/components/pages/homepage/ProjectsTeasing/index.astro
+++ b/src/components/pages/homepage/ProjectsTeasing/index.astro
@@ -12,34 +12,40 @@ const {
 ---
 
 <section class="overflow-hidden pt-14">
-  <div class="container relative mb-[100px]">
+  <div class="container relative mb-[140px] 2xl:mb-[100px]">
     <BackgroundForm1
       class="absolute top-[95px] left-[-600px] z-[-1] w-[1159px] h-[586px]"
     />
 
-    <h2 class="mb-20 text-display-small text-center">{data.title}</h2>
-    <Grid as="ul" class="gap-y-5 mb-[60px]">
-      <li class="2xl:col-start-2 2xl:col-span-7 isolate relative">
+    <Grid>
+      <h2
+        class="col-span-full mb-8 2xl:mb-20 text-headline-extra-large 2xl:text-display-small 2xl:text-center"
+      >
+        {data.title}
+      </h2>
+    </Grid>
+    <Grid as="ul" class="gap-y-2.5 mb-10 2xl:mb-[60px]">
+      <li class="col-span-full 2xl:col-start-2 2xl:col-span-7 isolate relative">
         <Brush
           id="3"
-          class="absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
+          class="hidden 2xl:block absolute z-[-1] w-[156px] h-[145px] translate-x-[-60px] translate-y-[-60px]"
         />
         <Teasing content={teasing1} />
       </li>
-      <li class="2xl:col-start-4 2xl:col-span-4">
+      <li class="col-span-full 2xl:col-start-4 2xl:col-span-4">
         <Teasing content={teasing2} />
       </li>
-      <li class="2xl:col-start-8 2xl:col-span-4 isolate relative">
+      <li class="col-span-full 2xl:col-start-8 2xl:col-span-4 isolate relative">
         <Brush
           id="3"
-          class="absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
+          class="hidden 2xl:block absolute right-0 bottom-0 z-[-1] w-[215px] h-[200px] translate-x-[105px] translate-y-[100px]"
         />
         <Teasing content={teasing3} />
       </li>
-      <li class="2xl:col-start-2 2xl:col-span-5">
+      <li class="col-span-full 2xl:col-start-2 2xl:col-span-5">
         <Teasing content={teasing4} />
       </li>
-      <li class="2xl:col-start-7 2xl:col-span-4">
+      <li class="col-span-full 2xl:col-start-7 2xl:col-span-4">
         <Teasing content={teasing5} />
       </li>
     </Grid>
