homepage: testimonials mobile

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,9 @@ import Footer from "../components/Footer.astro";
   <Expertises />
   <DerriereTeamUX />
   <ProjectsTeasing />
-  <!--
   <Testimonials />
-  <Contact />
+  <Contact class="mt-[200px]" />
+  <!--
   <Footer />
   -->
 </Layout>
