--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -16,17 +16,17 @@ const { viewMode = "block", testimonial } = Astro.props;
 
 {
   viewMode === "block" && (
-    <bloquote class="testimonial flex flex-col p-[50px] bg-neutral4 rounded-[26px]">
+    <bloquote class="testimonial flex flex-col gap-5 2xl:gap-0 px-5 py-6 2xl:p-[50px] bg-neutral4 rounded-[26px]">
       <p
         lang={testimonial.contentLang ?? undefined}
-        class="text-body-medium mt-[50px] mb-auto"
+        class="text-body-medium 2xl:mt-[50px] mb-auto"
       >
-        <span class="block mb-[50px] text-primary text-[240px] translate-x-[-15px] translate-y-[20px]">
+        <span class="block mb-10 2xl:mb-[50px] text-primary text-[200px] 2xl:text-[240px] translate-x-[-12px] translate-y-[56px] 2xl:translate-x-[-15px] 2xl:translate-y-[20px]">
           &ldquo;
         </span>
         {testimonial.content}&rdquo;
       </p>
-      <footer class="mt-10 text-body-medium-bold">
+      <footer class="2xl:mt-10 text-body-medium-bold">
         {testimonial.author}
         <cite>
           <span class="text-primary">&nbsp;{testimonial.company}</span>
