--- a/src/components/pages/homepage/Testimonials/index.astro
+++ b/src/components/pages/homepage/Testimonials/index.astro
@@ -6,19 +6,25 @@ import Testimonial from "../../../Testimonial.astro";
 ---
 
 <section class="container">
-  <h2 class="text-headline-medium text-neutral1 mb-10">{data.title}</h2>
-  <Grid as="ul">
+  <Grid>
+    <h2
+      class="col-span-full text-headline-small 2xl:text-headline-medium text-neutral1 mb-6 2xl:mb-10"
+    >
+      {data.title}
+    </h2>
+  </Grid>
+  <Grid as="ul" class="gap-y-5">
     {
       data.testimonials.map((testimonial) => {
         return (
-          <li class="2xl:col-span-4">
+          <li class="col-span-full 2xl:col-span-4">
             <Testimonial testimonial={testimonial} />
           </li>
         );
       })
     }
   </Grid>
-  <div class="flex justify-center mt-[60px]">
+  <div class="flex justify-center mt-10 2xl:mt-[60px]">
     <CallToAction href="/temoignages" type="secondary" rightIcon="forward">
       {data.callToAction.label}
     </CallToAction>
