homepage: contact mobile

--- a/src/components/@common/CallToAction.astro
+++ b/src/components/@common/CallToAction.astro
@@ -12,6 +12,7 @@ type Props<Tag extends HTMLTag> = BasicHTMLAttrbutes &
     leftIcon?: string;
     rightIcon?: string;
     as?: Tag;
+    class: string;
   }>;
 
 const {
