--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -16,7 +16,7 @@ const urlPageTitles = new Map([
 ]);
 ---
 
-<nav aria-label="Breadcrumb" class="container">
+<nav aria-label="Breadcrumb" class="container hidden lg:block">
   <ul>
     <li>
       <a href="/">Accueil</a>
