--- a/src/components/CommonPageHero.astro
+++ b/src/components/CommonPageHero.astro
@@ -14,7 +14,7 @@ const { title, subtitle, class: cssClasses } = Astro.props;
 const { showBackgroundForm = true } = Astro.props;
 const backgroundFormCSSClasses = showBackgroundForm
   ? [
-      "overflow-hidden",
+      "2xl:overflow-hidden",
       "2xl:mt-[-180px]",
       "2xl:mb-[-287px]",
       "2xl:pt-[273px]",
@@ -27,25 +27,29 @@ const backgroundFormCSSClasses = showBackgroundForm
   class:list={[
     backgroundFormCSSClasses,
     cssClasses,
+    "mt-[60px]",
+    "2xl:mt-0",
     {
-      "mt-[90px]": !showBackgroundForm,
+      "2xl:!mt-[90px]": !showBackgroundForm,
     },
   ]}
 >
   <div class="relative container">
     {
       showBackgroundForm && (
-        <BackgroundForm1 class="absolute z-[-1] top-[-125px] right-[-540px]" />
+        <BackgroundForm1 class="hidden 2xl:block absolute z-[-1] top-[-125px] right-[-540px]" />
       )
     }
-    <Grid class="gap-y-6">
-      <h1 class="2xl:col-start-2 2xl:col-span-full text-display-medium">
+    <Grid class="gap-y-5 2xl:gap-y-6">
+      <h1
+        class="col-span-full 2xl:col-start-2 2xl:col-span-full text-display-large 2xl:text-display-medium"
+      >
         {title}
       </h1>
       {
         subtitle && (
           <h2
-            class="2xl:col-start-2 2xl:col-span-6 text-body-extra-large"
+            class="col-span-full 2xl:col-start-2 2xl:col-span-6 text-body-large 2xl:text-body-extra-large"
             set:html={subtitle}
           />
         )
