--- a/src/components/Testimonial.astro
+++ b/src/components/Testimonial.astro
@@ -38,9 +38,9 @@ const { viewMode = "block", testimonial } = Astro.props;
 
 {
   viewMode === "inline" && (
-    <bloquote class="testimonial flex gap-6 p-10 bg-neutral4 rounded-[26px]">
-      <div class="flex-[0_0_78px] h-[54px] overflow-hidden">
-        <span class="block text-primary text-[238px] translate-x-[-13px] translate-y-[-95px]">
+    <bloquote class="testimonial flex flex-col 2xl:flex-row gap-6 px-5 py-6 2xl:p-10 bg-neutral4 rounded-[26px]">
+      <div class="2xl:flex-[0_0_78px] h-[47px] 2xl:h-[54px] overflow-hidden">
+        <span class="block text-primary text-[200px] translate-x-[-12px] translate-y-[-79px]">
           &ldquo;
         </span>
       </div>
