--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -11,7 +11,7 @@ interface Props {
 const { project } = Astro.props;
 ---
 
-<div class="p-10 bg-surface5 rounded-[26px]">
+<div class="p-5 2xl:p-10 bg-surface5 rounded-[26px]">
   <p class="mb-5 text-label-large">
     {project.name}
   </p>
