--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -11,6 +11,6 @@ import Footer from "../../components/Footer.astro";
   <Breadcrumb />
   <Hero />
   <AllProjects />
-  <Contact />
+  <Contact class="mt-[90px]" />
   <Footer />
 </Layout>
