--- a/src/components/@common/Grid.astro
+++ b/src/components/@common/Grid.astro
@@ -8,7 +8,7 @@ type Props<Tag extends HTMLTag> = Polymorphic<{
   as?: Tag;
 }>;
 
-const { as: HTMLTag = "div", class: cssClasses } = Astro.props;
+const { as: HTMLTag = "div", class: cssClasses, ...props } = Astro.props;
 ---
 
 <HTMLTag
@@ -23,6 +23,7 @@ const { as: HTMLTag = "div", class: cssClasses } = Astro.props;
     "2xl:px-0",
     cssClasses,
   ]}
+  {...props}
 >
   <slot />
 </HTMLTag>
