--- a/src/components/pages/nos-deux-profils/ItsAMatch.astro
+++ b/src/components/pages/nos-deux-profils/ItsAMatch.astro
@@ -7,38 +7,44 @@ import Brush from "../../@common/Brush.astro";
 import TeamUXStamp from "../../TeamUXStamp.astro";
 ---
 
-<section>
+<section class="mb-[180px] 2xl:mb-0">
   <Icon name="oval" />
 
   <div class="bg-neutral4">
     <div class="container">
-      <div class="flex justify-center">
+      <div class="pt-20 flex justify-center">
         <TeamUXStamp />
       </div>
 
-      <h3 class="mt-[60px] mb-10 text-display-small text-center">
+      <h3
+        class="mt-[60px] mb-5 2xl:mb-10 text-headline-extra-large 2xl:text-display-small text-center"
+      >
         {data.title}
       </h3>
       <Grid>
         <p
-          class="col-start-4 col-span-6 mb-20 text-body-extra-large text-center"
+          class="col-span-full 2xl:col-start-4 2xl:col-span-6 mb-20 text-body-large 2xl:text-body-extra-large 2xl:text-center"
         >
           {data.content}
         </p>
 
-        <div class="col-start-2 col-span-10">
-          <div class="p-10 bg-surface5 rounded-[26px]">
+        <div class="col-span-full 2xl:col-start-2 2xl:col-span-10">
+          <div class="px-5 py-6 2xl:p-10 bg-surface5 rounded-[26px]">
             <h3 class="mb-10 text-headline-medium-bold">
               Voici comment nous travaillons
             </h3>
-            <ul class="flex justify-between isolate">
+            <ul
+              class="flex flex-col gap-11 2xl:gap-0 2xl:flex-row items-center justify-between isolate"
+            >
               <li>
                 <Brush
                   id="1"
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-details" />
-                <span>Sens du travail</span>
+                <span class="text-label-medium 2xl:text-label-large"
+                  >Sens du travail</span
+                >
               </li>
               <li>
                 <Brush
@@ -46,7 +52,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-kindness" />
-                <span>Bienveillance</span>
+                <span class="text-label-medium 2xl:text-label-large"
+                  >Bienveillance</span
+                >
               </li>
               <li>
                 <Brush
@@ -54,7 +62,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-fiability" />
-                <span>Fiabilité</span>
+                <span class="text-label-medium 2xl:text-label-large"
+                  >Fiabilité</span
+                >
               </li>
               <li>
                 <Brush
@@ -62,7 +72,9 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] rotate-[180deg] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-sincerity" />
-                <span>Sincerité</span>
+                <span class="text-label-medium 2xl:text-label-large"
+                  >Sincerité</span
+                >
               </li>
               <li>
                 <Brush
@@ -70,13 +82,15 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
                   class="absolute z-[-1] w-[100px] h-[119px] left-0 top-[-7px] translate-x-1/2 opacity-20"
                 />
                 <Icon name="softskill-creative" />
-                <span>Force de proposition</span>
+                <span class="text-label-medium 2xl:text-label-large"
+                  >Force de proposition</span
+                >
               </li>
             </ul>
           </div>
         </div>
       </Grid>
-      <div class="mt-[60px] pb-[100px]">
+      <div class="mt-10 2xl:mt-[60px] pb-20 2xl:pb-[100px]">
         <CallToAction
           href="/notre-manifeste"
           type="primary"
@@ -94,10 +108,16 @@ import TeamUXStamp from "../../TeamUXStamp.astro";
 <style>
   section :global([astro-icon="oval"]) {
     width: 100%;
-    height: 145px;
+    height: 10px;
 
     &:last-of-type {
       transform: scaleY(-1);
+    }
+  }
+
+  @screen 2xl {
+    section :global([astro-icon="oval"]) {
+      height: 145px;
     }
   }
 
