dont @apply fonts

--- a/src/components/Breadcrumb.astro
+++ b/src/components/Breadcrumb.astro
@@ -17,7 +17,7 @@ const urlPageTitles = new Map([
 ---
 
 <nav aria-label="Breadcrumb" class="container hidden lg:block">
-  <ul>
+  <ul class="text-label-small">
     <li>
       <a href="/">Accueil</a>
       <Icon name="chevron_right_breadcrumb" width={16} height={16} />
@@ -49,8 +49,6 @@ const urlPageTitles = new Map([
 
 <style>
   ul {
-    @apply text-label-small;
-
     display: flex;
     align-items: center;
     gap: 4px;
