--- a/src/components/TeamUXStamp.astro
+++ b/src/components/TeamUXStamp.astro
@@ -11,13 +11,13 @@
       fill="none"></path>
   </defs>
 
-  <text dx="10" class="team-ux">
+  <text dx="10" class="team-ux text-headline-small">
     <textPath href="#team-ux">
       TEAM UX TEAM UX TEAM UX TEAM UX TEAM UX TEAM UX
     </textPath>
   </text>
 
-  <text class="dani-yuna">
+  <text class="dani-yuna text-label-small">
     <textPath href="#dani-yuna"
       >Yuna & Daniela & Yuna & Daniela & Yuna & Daniela &
     </textPath>
@@ -26,10 +26,6 @@
 
 <style>
   svg text {
-    @apply fill-primary text-headline-small;
-  }
-
-  svg text.dani-yuna {
-    @apply text-label-small;
+    @apply fill-primary;
   }
 </style>
