use woff2 variable font

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props;
     <style is:global>
       @font-face {
         font-family: "SatoshiVariable";
-        src: url("/fonts/satoshi-variable.ttf");
+        src: url("/fonts/satoshi-variable.woff2");
         font-weight: 500 900;
         font-display: swap;
       }
