declare mt of contact

--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -11,6 +11,10 @@ import Footer from "../../components/Footer.astro";
   <Breadcrumb />
   <Hero />
   <AllProjects />
-  <Contact class="mt-[90px]" />
+
+  <div class="mt-[90px]">
+    <Contact />
+  </div>
+
   <Footer />
 </Layout>
