small project title font size

--- a/src/components/pages/projets/AllProjects/SmallProject.astro
+++ b/src/components/pages/projets/AllProjects/SmallProject.astro
@@ -12,7 +12,7 @@ const { project } = Astro.props;
 ---
 
 <div class="p-5 2xl:p-10 bg-surface5 rounded-[26px]">
-  <p class="mb-5 text-label-large">
+  <p class="mb-5 text-headline-small 2xl:text-label-large">
     {project.name}
   </p>
   <p class="mb-8 text-headline-medium-bold">
