--- a/src/components/pages/notre-manifeste/Convictions.astro
+++ b/src/components/pages/notre-manifeste/Convictions.astro
@@ -4,26 +4,32 @@ import Grid from "../../@common/Grid.astro";
 import Brush from "../../@common/Brush.astro";
 ---
 
-<section class="container 2xl:mb-[144px]">
+<section class="container mb-[100px] 2xl:mb-[144px]">
   <Grid>
-    <h2 class="2xl:col-start-2 2xl:col-span-6 mb-10 text-display-small">
+    <h2
+      class="col-span-full 2xl:col-start-2 2xl:col-span-6 mb-10 text-headline-extra-large 2xl:text-display-small"
+    >
       {data.title}
     </h2>
-    <div class="2xl:col-start-2 2xl:col-span-5 relative isolate">
+    <div class="col-span-full 2xl:col-start-2 2xl:col-span-5 relative isolate">
       <Brush
         id="1"
-        class="absolute z-[-1] w-[250px] h-[297px] top-[260px] right-[-110px] rotate-[-45deg]"
+        class="hidden 2xl:block absolute z-[-1] w-[250px] h-[297px] top-[260px] right-[-110px] rotate-[-45deg]"
       />
+
       <Brush
         id="4"
-        class="absolute z-[-1] w-[330px] h-[328px] top-[965px] left-[-95px]"
+        class="hidden 2xl:block absolute z-[-1] w-[330px] h-[328px] top-[965px] left-[-95px]"
       />
+
       <ul class="flex flex-col gap-1">
         {
           data.convictions.map((conviction) => {
             return (
-              <li class="flex flex-col gap-5 p-10 bg-surface5 rounded-[4px] first:rounded-[26px_26px_4px_4px] last:rounded-[4px_4px_26px_26px]">
-                <h3 class="text-headline-medium-bold">{conviction.title}</h3>
+              <li class="flex flex-col gap-5 p-5 2xl:p-10 bg-surface5 rounded-[4px] first:rounded-[26px_26px_4px_4px] last:rounded-[4px_4px_26px_26px]">
+                <h3 class="text-headline-medium 2xl:text-headline-medium-bold">
+                  {conviction.title}
+                </h3>
                 <p class="2xl:mr-10 text-body-medium">{conviction.content}</p>
               </li>
             );
