--- a/src/components/pages/notre-manifeste/Introduction.astro
+++ b/src/components/pages/notre-manifeste/Introduction.astro
@@ -6,20 +6,20 @@ import BackgroundForm1 from "../../BackgroundForm1.astro";
 ---
 
 <section class="overflow-hidden 2xl:mt-[-287px] 2xl:mb-[-75px]">
-  <div class="container 2xl:pt-[287px] pb-[308px]">
+  <div class="container pb-[321px] 2xl:pt-[287px] 2xl:pb-[308px]">
     <Grid>
-      <div class="2xl:col-start-2 2xl:col-span-6 mt-[68px]">
+      <div class="col-span-full 2xl:col-start-2 2xl:col-span-6 mt-[68px]">
         <div class="isolate relative">
           <Brush
             id="1"
-            class="absolute z-[-1] right-[-202px] top-[-22px] w-[321px] h-[381px]"
+            class="absolute z-[-1] left-0 2xl:left-auto 2xl:right-[-202px] top-[calc(100%-60px)] 2xl:top-[-22px] w-[214px] h-[254px] 2xl:w-[321px] 2xl:h-[381px]"
           />
           <Brush
             id="4"
-            class="absolute z-[-2] right-[-361px] top-[-22px] w-[383px] h-[381px]"
+            class="absolute z-[-2] right-0 2xl:right-[-361px] top-[calc(100%-60px)] 2xl:top-[-22px] 2xl:w-[383px] 2xl:h-[381px] w-[255px] h-[254px]"
           />
           <BackgroundForm1
-            class="absolute z-[-3] right-[-1050px] bottom-[-160px]"
+            class="absolute z-[-3] right-[-405px] bottom-[-245px] 2xl:right-[-1050px] 2xl:bottom-[-160px]"
           />
           <div class="p-10 bg-surface7 rounded-[26px]">
             <p class="text-body-medium">
