--- a/src/pages/notre-manifeste/index.astro
+++ b/src/pages/notre-manifeste/index.astro
@@ -14,11 +14,13 @@ import Signature from "../../components/pages/notre-manifeste/Signature.astro";
   <Breadcrumb />
   <Hero />
   <Introduction />
-  <!--
   <Convictions />
   <Actions />
-  <Signature />
+
+  <div class="mb-[200px] 2xl:mb-0">
+    <Signature />
+  </div>
+
   <Contact />
   <Footer />
-  -->
 </Layout>
