--- a/src/pages/glossaire-ux-design/index.astro
+++ b/src/pages/glossaire-ux-design/index.astro
@@ -8,11 +8,13 @@ import Glossaire from "../../components/pages/glossaire-ux-design/Glossaire.astr
 ---
 
 <Layout title="Glossaire de l’UX design">
-  <!--
   <Breadcrumb />
   <Hero />
   <Glossaire />
-  <Contact />
+
+  <div class="mt-[90px] 2xl:mt-0">
+    <Contact />
+  </div>
+
   <Footer />
-  -->
 </Layout>
