--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,10 @@ import Footer from "../components/Footer.astro";
   <DerriereTeamUX />
   <ProjectsTeasing />
   <Testimonials />
-  <Contact class="mt-[200px]" />
+
+  <div class="mt-[200px] 2xl:mt-0">
+    <Contact />
+  </div>
+
   <Footer />
 </Layout>
